# PersonalCRM

./: .env.example  .env.example.production  .env.example.staging  .env.example.testing  .gitignore  .golangci.yml  AGENTS.md  Makefile  PLAN.md  README.md  TEST_GUIDE.md  crm  env.example  env.production  env.staging  env.testing  go.mod  go.sum  overdue_contacts_handler.patch  playwright.config.ts  share-logs.sh  smoke-test.sh
.ai/: architecture.md  development.md  patterns.md  reviewers.md  rules.md
.claude/: CLAUDE.md
.cursor/: config.json  rules
.git-hooks/: README.md  pre-commit.template  pre-push.template
.github/: README.md
backend/: go.mod  go.sum  sqlc.yaml
desktop-ui/: index.html  package-lock.json  package.json  tsconfig.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: .gitkeep  DEPLOYMENT.md  ENV_CHECKLIST.md  FIRST_TIME_PI_DEPLOYMENT.md  FRONTEND_STATE.md  GOOGLE_CALENDAR_SYNC.md  GOOGLE_OAUTH_PRODUCTION.md  GOOGLE_OAUTH_TESTING.md  HUMAN_SMOKE_TEST.md  IDENTITY_MATCHING.md  LOCAL_MACOS_DEPLOYMENT.md  PLAN.md  TEST_GUIDE.md  contact-methods-plan.md
frontend/: .env.example  .gitignore  .prettierignore  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
infra/: .gitkeep  docker-compose.yml  init-db.sql  install-systemd.sh  personalcrm-backend.service  personalcrm-database.service  personalcrm-frontend.service  personalcrm.target  test-systemd.sh
scripts/: deploy.sh  install-git-hooks.sh  setup-pi.sh  start-backend-prod.sh  start-backend.sh  (+4 more)
(+271 files in other folders)
